Solución de errores

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
                 <div class="presentacion-links">
                     <h2 class="presentacion-link-subtitulo">Mis Redes Sociales:</h2>
-                    <a target="_blank" class="presentacion-links-social" href="https://github.com/robertojunnior/"><img src="./assets/github2.png" alt="logo-github">GitHub</a>
+                    <a target="_blank" class="presentacion-links-social" href="https://github.com/sergioand26"><img src="./assets/github2.png" alt="logo-github">GitHub</a>
 
-                    <a target="_blank" class="presentacion-links-social" href="https://www.linkedin.com/in/roberto-r-junior/"><img src="./assets/linkedin2.png" alt="logo-linkedin">LinkedIn</a>
+                    <a target="_blank" class="presentacion-links-social" href="https://www.linkedin.com/in/sergio-andr%C3%A9s-reategui-mantilla/"><img src="./assets/linkedin2.png" alt="logo-linkedin">LinkedIn</a>
 
                 </div>
             </section>
